[package]
name = "walnuts"
version = "0.1.0"
authors = ["aimeez <aimeez@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
k256 = "0.5.10"
sha2 = "0.9.2"
serde = { version = "1.0.117", features = ["derive"] }
structopt = "0.3.20"
serde_json = "1.0.59"
anyhow = "1.0.34"



